<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Data_PCR" Id="{8041bc92-21c9-4be0-bdeb-d07fbadba5e3}">
    <Declaration><![CDATA[TYPE ST_Data_PCR :
STRUCT
	dateTime        	: STRING;
    pumpNumber      	: DINT;
    step            	: STRING;
    grossWt_g       	: REAL;
    tareWt_g        	: REAL;
    netWt_g         	: REAL;
    netVolume       	: REAL;
    targetVolume_ul 	: REAL;
    difference_percent 	: REAL;
    criteria        	: REAL;
    pumpRev         	: DINT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>